--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(whatever)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
 
 find_package(PCL 1.8 REQUIRED)
-find_package(OpenCV REQUIRED)
+find_package(OpenCV REQUIRED)	# TODO remove if opencv is not required
 find_package(Eigen3)
 
 include_directories(include)
@@ -17,3 +17,6 @@ add_definitions(${PCL_DEFINITIONS})
 # TODO rename this
 add_executable (main main.cc)
 target_link_libraries (main ${PCL_LIBRARIES} ${OpenCV_LIBS})
+
+add_executable (pcd_visualizer pcd_visualizer.cc)
+target_link_libraries (pcd_visualizer ${PCL_LIBRARIES})
